// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schedule behavior with cron 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "Schedule_15669BF1": {
        "is_enabled": true,
        "schedule_expression": "cron(0/1 * ? * * *)",
      },
    },
    "aws_cloudwatch_event_target": {
      "Schedule_ScheduleTarget-f00e20_0FE69CED": {
        "arn": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.qualified_arn}",
        "rule": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.name}",
      },
    },
    "aws_cloudwatch_log_group": {
      "Schedule_Schedule-OnTick-f00e20_CloudwatchLogGroup_A1130B77": {
        "name": "/aws/lambda/Schedule-OnTick-f00e20-c8cfc706",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Schedule_Schedule-OnTick-f00e20_IamRolePolicy_1289D16A": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Schedule_Schedule-OnTick-f00e20_IamRolePolicyAttachment_0DF55EED": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.name}",
      },
    },
    "aws_lambda_function": {
      "Schedule_Schedule-OnTick-f00e20_7A6C29A1": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Schedule-OnTick-f00e20-c8cfc706",
          },
        },
        "function_name": "Schedule-OnTick-f00e20-c8cfc706",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Schedule_Schedule-OnTick-f00e20_S3Object_12F70964.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Schedule_Schedule-OnTick-f00e20_InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3_C63857E8": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.function_name}",
        "principal": "events.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.version}",
        "source_arn": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Schedule_Schedule-OnTick-f00e20_S3Object_12F70964": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`schedule behavior with cron 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Schedule": {
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "Schedule-OnTick-f00e20": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.17.0",
                        },
                        "id": "Asset",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Default",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRole",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "S3Object",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "Schedule-OnTick-f00e20",
                    "path": "root/Default/Schedule/Schedule-OnTick-f00e20",
                  },
                  "ScheduleTarget-f00e20": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ScheduleTarget-f00e20",
                    "path": "root/Default/Schedule/ScheduleTarget-f00e20",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule behavior with rate 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "Schedule_15669BF1": {
        "is_enabled": true,
        "schedule_expression": "rate(2 minutes)",
      },
    },
    "aws_cloudwatch_event_target": {
      "Schedule_ScheduleTarget-f00e20_0FE69CED": {
        "arn": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.qualified_arn}",
        "rule": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.name}",
      },
    },
    "aws_cloudwatch_log_group": {
      "Schedule_Schedule-OnTick-f00e20_CloudwatchLogGroup_A1130B77": {
        "name": "/aws/lambda/Schedule-OnTick-f00e20-c8cfc706",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Schedule_Schedule-OnTick-f00e20_IamRolePolicy_1289D16A": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Schedule_Schedule-OnTick-f00e20_IamRolePolicyAttachment_0DF55EED": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.name}",
      },
    },
    "aws_lambda_function": {
      "Schedule_Schedule-OnTick-f00e20_7A6C29A1": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Schedule-OnTick-f00e20-c8cfc706",
          },
        },
        "function_name": "Schedule-OnTick-f00e20-c8cfc706",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Schedule_Schedule-OnTick-f00e20_S3Object_12F70964.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Schedule_Schedule-OnTick-f00e20_InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3_C63857E8": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.function_name}",
        "principal": "events.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.version}",
        "source_arn": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Schedule_Schedule-OnTick-f00e20_S3Object_12F70964": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`schedule behavior with rate 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Schedule": {
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "Schedule-OnTick-f00e20": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.17.0",
                        },
                        "id": "Asset",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Default",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRole",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "S3Object",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "Schedule-OnTick-f00e20",
                    "path": "root/Default/Schedule/Schedule-OnTick-f00e20",
                  },
                  "ScheduleTarget-f00e20": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ScheduleTarget-f00e20",
                    "path": "root/Default/Schedule/ScheduleTarget-f00e20",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule with two functions 1`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "aws_cloudwatch_event_rule": {
      "Schedule_15669BF1": {
        "is_enabled": true,
        "schedule_expression": "cron(0/1 * ? * * *)",
      },
    },
    "aws_cloudwatch_event_target": {
      "Schedule_ScheduleTarget-f00e20_0FE69CED": {
        "arn": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.qualified_arn}",
        "rule": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.name}",
      },
    },
    "aws_cloudwatch_log_group": {
      "Schedule_Schedule-OnTick-f00e20_CloudwatchLogGroup_A1130B77": {
        "name": "/aws/lambda/Schedule-OnTick-f00e20-c8cfc706",
        "retention_in_days": 30,
      },
    },
    "aws_iam_role": {
      "Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F": {
        "assume_role_policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Action\\":\\"sts:AssumeRole\\",\\"Principal\\":{\\"Service\\":\\"lambda.amazonaws.com\\"},\\"Effect\\":\\"Allow\\"}]}",
      },
    },
    "aws_iam_role_policy": {
      "Schedule_Schedule-OnTick-f00e20_IamRolePolicy_1289D16A": {
        "policy": "{\\"Version\\":\\"2012-10-17\\",\\"Statement\\":[{\\"Effect\\":\\"Allow\\",\\"Action\\":\\"none:null\\",\\"Resource\\":\\"*\\"}]}",
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.name}",
      },
    },
    "aws_iam_role_policy_attachment": {
      "Schedule_Schedule-OnTick-f00e20_IamRolePolicyAttachment_0DF55EED": {
        "policy_arn": "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.name}",
      },
    },
    "aws_lambda_function": {
      "Schedule_Schedule-OnTick-f00e20_7A6C29A1": {
        "architectures": [
          "arm64",
        ],
        "environment": {
          "variables": {
            "NODE_OPTIONS": "--enable-source-maps",
            "WING_FUNCTION_NAME": "Schedule-OnTick-f00e20-c8cfc706",
          },
        },
        "function_name": "Schedule-OnTick-f00e20-c8cfc706",
        "handler": "index.handler",
        "memory_size": 1024,
        "publish": true,
        "role": "\${aws_iam_role.Schedule_Schedule-OnTick-f00e20_IamRole_88C44F4F.arn}",
        "runtime": "nodejs18.x",
        "s3_bucket": "\${aws_s3_bucket.Code.bucket}",
        "s3_key": "\${aws_s3_object.Schedule_Schedule-OnTick-f00e20_S3Object_12F70964.key}",
        "timeout": 60,
        "vpc_config": {
          "security_group_ids": [],
          "subnet_ids": [],
        },
      },
    },
    "aws_lambda_permission": {
      "Schedule_Schedule-OnTick-f00e20_InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3_C63857E8": {
        "action": "lambda:InvokeFunction",
        "function_name": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.function_name}",
        "principal": "events.amazonaws.com",
        "qualifier": "\${aws_lambda_function.Schedule_Schedule-OnTick-f00e20_7A6C29A1.version}",
        "source_arn": "\${aws_cloudwatch_event_rule.Schedule_15669BF1.arn}",
      },
    },
    "aws_s3_bucket": {
      "Code": {
        "bucket_prefix": "code-c84a50b1-",
      },
    },
    "aws_s3_object": {
      "Schedule_Schedule-OnTick-f00e20_S3Object_12F70964": {
        "bucket": "\${aws_s3_bucket.Code.bucket}",
        "key": "<key>",
        "source": "<source>",
      },
    },
  },
}
`;

exports[`schedule with two functions 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformResource",
                  "version": "0.17.0",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Schedule": {
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "Schedule-OnTick-f00e20": {
                    "children": {
                      "Asset": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformAsset",
                          "version": "0.17.0",
                        },
                        "id": "Asset",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/Asset",
                      },
                      "CloudwatchLogGroup": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "CloudwatchLogGroup",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/CloudwatchLogGroup",
                      },
                      "Default": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "Default",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/Default",
                      },
                      "IamRole": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRole",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRole",
                      },
                      "IamRolePolicy": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRolePolicy",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRolePolicy",
                      },
                      "IamRolePolicyAttachment": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "IamRolePolicyAttachment",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/IamRolePolicyAttachment",
                      },
                      "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                      },
                      "S3Object": {
                        "constructInfo": {
                          "fqn": "cdktf.TerraformResource",
                          "version": "0.17.0",
                        },
                        "id": "S3Object",
                        "path": "root/Default/Schedule/Schedule-OnTick-f00e20/S3Object",
                      },
                    },
                    "constructInfo": {
                      "fqn": "constructs.Construct",
                      "version": "10.2.70",
                    },
                    "display": {
                      "description": "A cloud function (FaaS)",
                      "title": "Function",
                    },
                    "id": "Schedule-OnTick-f00e20",
                    "path": "root/Default/Schedule/Schedule-OnTick-f00e20",
                  },
                  "ScheduleTarget-f00e20": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.17.0",
                    },
                    "id": "ScheduleTarget-f00e20",
                    "path": "root/Default/Schedule/ScheduleTarget-f00e20",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.17.0",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.17.0",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.2.70",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.2.70",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.17.0",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.17.0",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.17.0",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
